--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "@angular/platform-browser": "^7.1.3",
     "@angular/platform-browser-dynamic": "^7.1.3",
     "@angular/router": "^7.1.3",
-    "apollo-angular": "1.1.1",
-    "apollo-angular-link-http": "1.1.0",
-    "apollo-cache-inmemory": "1.2.5",
-    "apollo-client": "2.3.5",
+    "apollo-angular": "1.5.0",
+    "apollo-angular-link-http": "1.4.0",
+    "apollo-cache-inmemory": "1.3.11",
+    "apollo-client": "2.4.7",
+    "apollo-link": "1.2.6",
+    "apollo-link-error": "1.1.5",
     "core-js": "^2.6.0",
     "graphql": "14.0.2",
-    "graphql-tag": "2.9.2",
+    "graphql-tag": "2.10.0",
     "hammerjs": "^2.0.8",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
