--- a/graphcool/graphcool.yml
+++ b/graphcool/graphcool.yml
@@ -29,17 +29,17 @@ functions:
      handler:
        code: src/email-password/signup.ts
 
-#   authenticate:
-#     type: resolver
-#     schema: src/email-password/authenticate.graphql
-#     handler:
-#       code: src/email-password/authenticate.ts
-#
-#   loggedInUser:
-#     type: resolver
-#     schema: src/email-password/loggedInUser.graphql
-#     handler:
-#       code: src/email-password/loggedInUser.ts
+   authenticate:
+     type: resolver
+     schema: src/email-password/authenticate.graphql
+     handler:
+       code: src/email-password/authenticate.ts
+
+   loggedInUser:
+     type: resolver
+     schema: src/email-password/loggedInUser.graphql
+     handler:
+       code: src/email-password/loggedInUser.ts
 
 
 # Model/Relation permissions are used to limit the API access
