--- a/graphcool/graphcool.yml
+++ b/graphcool/graphcool.yml
@@ -57,11 +57,25 @@ permissions:
 
   # User - permissão para usuário autenticados
   - operation: User.read
+    fields: [name, email, createdAt, updatedAt, photo]
     authenticated: true
+
+  - operation: User.read
+    authenticated: true
+    query: src/permissions/User.graphql
+
   - operation: User.update
     authenticated: true
+    query: src/permissions/User.graphql
+
+    # permite que User altere somente sua foto
+  - operation: User.update
+    fields: [photo]
+    authenticated: true
+
   - operation: User.delete
     authenticated: true
+    query: src/permissions/User.graphql
 
   # Chat - permissão para usuário autenticados
   - operation: Chat.read
