--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "release": "standard-version",
-    "release-as": "npm run release -- --release-as 0.5.0"
+    "release-as": "npm run release -- --release-as 0.6.0"
   },
   "private": true,
   "dependencies": {
@@ -33,6 +33,7 @@
     "graphql": "14.0.2",
     "graphql-tag": "2.10.0",
     "hammerjs": "^2.0.8",
+    "js-base64": "^2.5.0",
     "rxjs": "^6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "^0.8.26"
@@ -44,7 +45,7 @@
     "@types/angular-material": "1.1.62",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "2.0.3",
-    "@types/js-base64": "2.3.1",
+    "@types/js-base64": "^2.3.1",
     "@types/node": "10.12.12",
     "codelyzer": "4.5.0",
     "jasmine-core": "2.99.1",
